Kind-k8s/app1-service.yaml
kind: Pod
apiVersion: v1
metadata:
  name: app1
  labels:
    app: app1
    svc: app1-service
spec:
  containers:
  - name: app1
    image: nginx:1.22.0
    volumeMounts:
    - name: config
      mountPath: /usr/share/nginx/html
      readOnly: true
  volumes:
  - name: config
    configMap:
      name: app1-config
---
kind: Service
apiVersion: v1
metadata:
  name: app1-service
spec:
  selector:
    app: app1
  ports:
  - port: 80
