Kind-k8s/app2-service.yaml
kind: Pod
apiVersion: v1
metadata:
  name: app2
  labels:
    app: app2
    svc: app2-service
spec:
  containers:
  - name: app2
    image: nginx:1.22.0
    volumeMounts:
    - name: config
      mountPath: /usr/share/nginx/html
      readOnly: true
  volumes:
  - name: config
    configMap:
      name: app2-config
---
kind: Service
apiVersion: v1
metadata:
  name: app2-service
spec:
  selector:
    app: app2
  ports:
  - port: 80
