Kind-k8s/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/app1(/|$)(.*)"
        backend:
          service:
            name: app1-service
            port:
              number: 80
      - pathType: Prefix
        path: "/app2(/|$)(.*)"
        backend:
          service:
            name: app2-service
            port:
              number: 80
      - pathType: Prefix
        path: "/app1-app2(/|$)(.*)"
        backend:
          service:
            name: app1-app2-service
            port:
              number: 80
